docs: Extend README

--- a/configs/end_to_end_data.yaml
+++ b/configs/end_to_end_data.yaml
@@ -100,4 +100,4 @@ parameters:
   test_split_size: 0.1
   push_to_huggingface: false
   dataset_id: pauliusztin/llmtwin
-  mock: true
+  mock: false
