--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ loguru = "^0.7.2"
 rich = "^13.7.1"
 numpy = "^1.26.4"
 poethepoet = "0.29.0"
+datasets = "^3.0.1"
 
 # Digital data ETL
 selenium = "^4.21.0"
