chore: Update dataset generation config

--- a/configs/generate_preference_datasets.yaml
+++ b/configs/generate_preference_datasets.yaml
@@ -10,4 +10,4 @@ parameters:
   dataset_type: "preference"
   push_to_huggingface: true
   dataset_id: pauliusztin/llmtwin-dpo
-  mock: true
+  mock: false
