--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -6,3 +6,9 @@ settings:
     synchronous: false
 
 parameters:
+  finetuning_type: sft
+  num_train_epochs: 1 # 3
+  per_device_train_batch_size: 2
+  learning_rate: 3e-4
+  dataset_huggingface_workspace: mlabonne
+  is_dummy: true
