--- a/llm_engineering/model/finetuning/requirements.txt
+++ b/llm_engineering/model/finetuning/requirements.txt
@@ -1,5 +1,4 @@
 accelerate==0.33.0
-# torch==2.4.0
 transformers==4.43.3
 datasets==2.20.0
 peft==0.12.0
@@ -7,3 +6,5 @@ trl==0.9.6
 bitsandbytes==0.43.3
 comet-ml==3.44.3
 flash-attn==2.3.6
+# unsloth==2024.10.2
+unsloth==2024.9.post2
