--- a/pyproject.toml
+++ b/pyproject.toml
@@ -86,6 +86,7 @@ run-import-data-warehouse-from-json = "poetry run python -m tools.data_warehouse
 
 # Training pipelines
 run-training-pipeline = "poetry run python -m tools.run --no-cache --run-training"
+run-evaluation-pipeline = "poetry run python -m tools.run --no-cache --run-evaluation"
 
 # Inference
 call-rag-retrieval-module = "poetry run python -m tools.rag"
