--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ langchain-community = "^0.2.11"
 # Inference
 fastapi = ">=0.100,<=0.110"
 uvicorn = "^0.30.6"
+opik = "^0.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
