--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,8 @@ DATABASE_HOST="mongodb://llm_engineering:llm_engineering@127.0.0.1:27017"
 
 # Qdrant vector database
 USE_QDRANT_CLOUD=false
-QDRANT_CLOUD_URL="str"
-QDRANT_APIKEY="str"
+QDRANT_CLOUD_URL=str
+QDRANT_APIKEY=str
 
 # AWS Authentication
 AWS_ARN_ROLE=str
