--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,7 +26,7 @@ services:
       - 6333
       - 6334
     volumes:
-      - qdrant_data:/qdrant/storage:z
+      - qdrant_data:/qdrant/storage
     networks:
       - local
     restart: always
