--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "~3.11"
-zenml = { version = "0.64.0", extras = ["server"] }
+zenml = {version = "0.67.0", extras = ["server"]}
 pymongo = "^4.6.2"
 click = "^8.0.1"
 loguru = "^0.7.2"
@@ -67,7 +67,7 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poe.tasks]
 # Data pipelines
-run-digital-data-etl-alex = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_alex_vesa.yaml"
+run-digital-data-etl-alex = "echo 'It is not supported anymore.'"
 run-digital-data-etl-maxime = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_maxime_labonne.yaml"
 run-digital-data-etl-paul = "poetry run python -m tools.run --run-etl --no-cache --etl-config-filename digital_data_etl_paul_iusztin.yaml"
 run-digital-data-etl = [
@@ -91,7 +91,7 @@ run-evaluation-pipeline = "poetry run python -m tools.run --no-cache --run-evalu
 # Inference
 call-rag-retrieval-module = "poetry run python -m tools.rag"
 
-run-inference-ml-service = "uvicorn tools.ml_service:app --host 0.0.0.0 --port 8000 --reload"
+run-inference-ml-service = "poetry run uvicorn tools.ml_service:app --host 0.0.0.0 --port 8000 --reload"
 call-inference-ml-service = "curl -X POST 'http://127.0.0.1:8000/rag' -H 'Content-Type: application/json' -d '{\"query\": \"My name is Paul Iusztin. Could you draft a LinkedIn post discussing RAG systems? I am particularly interested in how RAG works and how it is integrated with vector DBs and LLMs.\"}'"
 
 # Infrastructure
@@ -118,11 +118,11 @@ export-settings-to-zenml = "poetry run python -m tools.run --export-settings"
 delete-settings-zenml = "poetry run zenml secret delete settings"
 
 ## SageMaker
-create-sagemaker-role = "poetry run python llm_engineering/infrastructure/aws/roles/create_sagemaker_role.py"
-create-sagemaker-execution-role = "poetry run python llm_engineering/core/aws/roles/create_execution_role.py"
+create-sagemaker-role = "poetry run python -m llm_engineering.infrastructure.aws.roles.create_sagemaker_role"
+create-sagemaker-execution-role = "poetry run python -m llm_engineering.infrastructure.aws.roles.create_execution_role"
 deploy-inference-endpoint = "poetry run python -m llm_engineering.infrastructure.aws.deploy.huggingface.run"
 test-sagemaker-endpoint = "poetry run python -m llm_engineering.model.inference.test"
-delete-inference-endpoint = "poetry run python llm_engineering/infrastructure/aws/deploy/delete_sagemaker_endpoint.py"
+delete-inference-endpoint = "poetry run python -m llm_engineering.infrastructure.aws.deploy.delete_sagemaker_endpoint"
 
 ## Docker
 build-docker-image = "docker buildx build --platform linux/amd64 -t llmtwin -f Dockerfile ."
@@ -150,5 +150,5 @@ cmd = "poetry run zenml up"
 
 # Tests
 [tool.poe.tasks.test]
-cmd = "pytest tests/"
+cmd = "poetry run pytest tests/"
 env = { ENV_FILE = ".env.testing" }
