--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@ OPENAI_API_KEY=str
 # Huggingface API Config
 HUGGINGFACE_ACCESS_TOKEN=str
 
-# Comet ML (during training) 
+# Comet ML (during training and inference) 
 COMET_API_KEY=str
 
 # --- Required settings when deploying the code. ---
