--- a/configs/end_to_end_data.yaml
+++ b/configs/end_to_end_data.yaml
@@ -1,6 +1,6 @@
 settings:
   docker:
-    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
+    parent_image: 122610508479.dkr.ecr.us-east-1.amazonaws.com/zenml-lbynmz
     skip_build: True
   orchestrator.sagemaker:
     synchronous: false
@@ -11,11 +11,11 @@ parameters:
     - user_full_name: Paul Iusztin # [First Name(s)] [Last Name]
       links:
         # Medium (only articles that are not under the paid wall work)
-        - https://medium.com/decodingml/an-end-to-end-framework-for-production-ready-llm-systems-by-building-your-llm-twin-2cc6bb01141f
-        - https://medium.com/decodingml/a-real-time-retrieval-system-for-rag-on-social-media-data-9cc01d50a2a0
-        - https://medium.com/decodingml/sota-python-streaming-pipelines-for-fine-tuning-llms-and-rag-in-real-time-82eb07795b87
-        - https://medium.com/decodingml/the-4-advanced-rag-algorithms-you-must-know-to-implement-5d0c7f1199d2
-        - https://medium.com/decodingml/architect-scalable-and-cost-effective-llm-rag-inference-pipelines-73b94ef82a99
+        # - https://medium.com/decodingml/an-end-to-end-framework-for-production-ready-llm-systems-by-building-your-llm-twin-2cc6bb01141f
+        # - https://medium.com/decodingml/a-real-time-retrieval-system-for-rag-on-social-media-data-9cc01d50a2a0
+        # - https://medium.com/decodingml/sota-python-streaming-pipelines-for-fine-tuning-llms-and-rag-in-real-time-82eb07795b87
+        # - https://medium.com/decodingml/the-4-advanced-rag-algorithms-you-must-know-to-implement-5d0c7f1199d2
+        # - https://medium.com/decodingml/architect-scalable-and-cost-effective-llm-rag-inference-pipelines-73b94ef82a99
         # Substack
         - https://decodingml.substack.com/p/a-blueprint-for-designing-production?r=1ttoeh
         - https://decodingml.substack.com/p/the-difference-between-development?r=1ttoeh
@@ -82,6 +82,6 @@ parameters:
         - https://maximelabonne.substack.com/p/how-to-start-machine-learning-for-developers-in-2022-390af12b193f
   # Generate instruct dataset pipeline parameters
   test_split_size: 0.1
-  push_to_huggingface: false
-  dataset_id: pauliusztin/llmtwin
-  mock: false
+  push_to_huggingface: true
+  dataset_id: Oysiyl/llmtwin
+  mock: true
