--- a/configs/generate_instruct_datasets.yaml
+++ b/configs/generate_instruct_datasets.yaml
@@ -1,6 +1,6 @@
 settings:
   docker:
-    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
+    parent_image: 122610508479.dkr.ecr.us-east-1.amazonaws.com/zenml-lbynmz
     skip_build: True
   orchestrator.sagemaker:
     synchronous: false
@@ -9,5 +9,5 @@ parameters:
   test_split_size: 0.1
   dataset_type: "instruction"
   push_to_huggingface: true
-  dataset_id: pauliusztin/llmtwin
-  mock: false
+  dataset_id: Oysiyl/llmtwin
+  mock: true
