--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -1,13 +1,13 @@
 settings:
   docker:
-    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
+    parent_image: 122610508479.dkr.ecr.us-east-1.amazonaws.com/zenml-lbynmz
     skip_build: True
   orchestrator.sagemaker:
     synchronous: false
 
 parameters:
-  finetuning_type: sft
-  num_train_epochs: 3
+  finetuning_type: dpo
+  num_train_epochs: 1
   per_device_train_batch_size: 2
   learning_rate: 3e-4
   dataset_huggingface_workspace: mlabonne
