--- a/configs/training.yaml
+++ b/configs/training.yaml
@@ -1,13 +1,12 @@
 settings:
   docker:
-    parent_image: 122610508479.dkr.ecr.us-east-1.amazonaws.com/zenml-lbynmz
-    skip_build: True
+    parent_image: 992382797823.dkr.ecr.eu-central-1.amazonaws.com/zenml-rlwlcs:latest
   orchestrator.sagemaker:
     synchronous: false
 
 parameters:
-  finetuning_type: dpo
-  num_train_epochs: 1
+  finetuning_type: sft
+  num_train_epochs: 3
   per_device_train_batch_size: 2
   learning_rate: 3e-4
   dataset_huggingface_workspace: mlabonne
