--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ langchain-community = "^0.2.11"
 fastapi = ">=0.100,<=0.110"
 uvicorn = "^0.30.6"
 opik = "^0.2.2"
+torch = "2.2.2"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -144,10 +145,6 @@ control.expr = "sys.platform"
 case = "darwin"
 env = { OBJC_DISABLE_INITIALIZE_FORK_SAFETY = "YES" }
 cmd = "poetry run zenml up"
-
-[[tool.poe.tasks.local-zenml-server-up.switch]]
-case = "win32"
-cmd = "poetry run zenml up --blocking"
 
 [[tool.poe.tasks.local-zenml-server-up.switch]]
 cmd = "poetry run zenml up"
